tests/baselines/reference/parserModuleDeclaration3.errors.txt
parserModuleDeclaration3.ts(2,3): error TS1038: A 'declare' modifier cannot be used in an already ambient context.


==== parserModuleDeclaration3.ts (1 errors) ====
    declare module M {
      declare module M2 {
      ~~~~~~~
!!! error TS1038: A 'declare' modifier cannot be used in an already ambient context.
      }
    }